# BOM-COMPARE-GENERATOR

./: BOM-COMPARE-GENERATOR.bat  INSTALL.md  README.md  launch_ui.py  pyproject.toml  requirements.txt  run_ui.py  start_ui.sh  temp_template.xlsx  test_setup.py
src/bomgen/: __init__.py  __main__.py  cli.py  models.py  random_data.py  template.py  ui.py
templates/: BOM_COMPARE_TEMPLATE.xlsx
