[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bom-generator"
version = "0.1.0"
description = "A tool for generating and comparing Bill of Materials"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "streamlit>=1.28.0",
]

[project.scripts]
bomgen = "bomgen.cli:app"
bomgen-ui = "streamlit run bomgen/ui.py"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bomgen*"]

[tool.setuptools.package-dir]
"" = "src"
